--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container_ {
+  background-color: antiquewhite;
+  width: 75%;
+  height: 600px;
+  padding: 25px;
+  margin: 30px auto;
+  display: block;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 35px;
+  border-radius: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  background-image: linear-gradient(#d1d5db 1px, transparent 0px);
+  background-size: 100% 2em;
+  background-position-y: 1.5rem;
+  line-height: 2em;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  margin-top: 15px;
+  margin-bottom: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li::marker {
+  content: '- ';
+  font-size: 1.2em;
 }
